CHANGES


2018-05-23 (nb)

Added more comments in the source code.


2016-05-01 (nb)

Added support for, and tested to work with, 8 MHz CPU clock. Other small fixes.

- Added support for, and tested to work with, 8 MHz CPU clock. Using CPUFREQ.
- Replaced "while (1)" with "for (;;)".


2016-05-01 (nb)

Renamed function names - for clarity, added new. Improved testing script.

- Refactoring: renamed ssd1306_fillp to ssd1306_fill2; ssd1306_char_f8x16 to ssd1306_string_font8x16xy.
- Added new: ssd1306_fill4 function; ssd1306_clear macro.
- Improved testing script.


2016-05-01 (nb)

Renamed ssd1306xled_test to ssd1306xled_test1.


2016-05-01 (nb)

Fixed Makefile. Other small changes.

- Fixed Makefile.
- Updated texts, fixed typos.


2016-04-29 (nb)

Updated to the latest NUM2STR. Other small updated and fixes.

- Updated to the latest NUM2STR.
- Removed old unused code.
- Updated text files. Fixed typos.


2015-09-26 (nb)

Added new functions and definitions. Updated testing app. Other small fixes.

- Added macro definitions for new ssd1306_char, ssd1306_string, ssd1306_numdec, ssd1306_numdecp functions.
- Added new ssd1306_fillp, ssd1306_fill functions.
- Removed old and unused code.
- Updated and improved testing app.
- Fixes in texts and comments.


2015-01-17 (nb)

Added support for printing decimal numbers.

- Added support for printing decimal numbers with the "num2str" library. New functions: ssd1306_numdec_font6x8, ssd1306_numdecp_font6x8.
- Minor updates in the text files.


2015-01-13 (nb)

Updated README file - added folders and files layout.


2015-01-12 (nb)

Added MIT License info, added LICENSE.txt file. Added licensing info to the source code file.


2015-01-12 (nb)

Updated RESEARCH and TODO files.


2015-01-10 (nb)

Fixed and improved initialization. New and improved printing of text. Updated texts.

- Fixed initialization commands.
- Implemented ssd1306_init more efficiently.
- New functions ssd1306_send_command_start, ssd1306_send_command_stop.