@@ -5,6 +5,8 @@ CHANGES
 
 Added more comments in the source code.
 
+Remove unused cpufreq.h file. More comments in the source code. Updated copyright and related info.
+
 
 2016-05-01 (nb)
 
